# slop-leaderboard

./: Cargo.toml  docker-compose.yaml  justfile
common/src/: lib.rs
leaderboard/: Cargo.toml
leaderboard/src/: main.rs
leaderboard/templates/: leaderboard.html  leaderboard_rows.html
slopmon/: Cargo.toml
slopmon/src/: main.rs
src/: main.rs
