[package]
name = "leaderboard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
redis = { version = "1.2.0", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
async-stream = "0.3"
futures-core = "0.3"
common = { path = "../common" }
askama = "0.15.6"
askama_web = { version = "0.15.2", features = ["axum-0.8"] }
