[package]
name = "slopmon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
daemonize = "0.5.0"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
toml = { version = "1.1.2", features = ["serde"] }
common = { path = "../common" }
